--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,14 +26,20 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.core:core:1.0.2'
-
+    implementation 'androidx.core:core:1.1.0'
+    implementation (name:'GDTSDK.unionNormal.4.100.970', ext:'aar')
 }
